backup/ingress-test/voyager-ingress.yml
# https://github.com/appscode/voyager/tree/master/docs/guides/ingress
# https://github.com/appscode/voyager/blob/master/docs/guides/ingress/configuration/node-port.md
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ng
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: ng
    spec:
      containers:
      - name: ng
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ng
  labels:
    run: ng
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: ng
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ng
  annotations:
    ingress.appscode.com/type: NodePort
    # ingress.appscode.com/stats: 'true'
spec:
  rules:
  - host: ng.kube.example.com
    http:
      paths:
      - backend:
          serviceName: ng
          servicePort: 80



---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: httpd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
  labels:
    run: httpd
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: httpd
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpd
  annotations:
    ingress.appscode.com/type: NodePort
    # ingress.appscode.com/stats: 'true'
spec:
  rules:
  - host: httpd.kube.example.com
    http:
      paths:
      - backend:
          serviceName: httpd
          servicePort: 80
